# fhir-sazare

./: .dockerignore  .gitignore  Caddyfile.example  Cargo.toml  Dockerfile  LICENSE  NOTICE.md  README.md  config.example.yaml  config.smart.yaml  docker-compose.yml
sazare-core/: Cargo.toml  build.rs
sazare-core/profiles/jp-core/: jp-core-allergyintolerance.json  jp-core-condition-diagnosis.json  jp-core-condition.json  jp-core-coverage.json  jp-core-diagnosticreport-dentaloral.json  jp-core-diagnosticreport-endoscopy.json  jp-core-diagnosticreport-labresult.json  jp-core-diagnosticreport-microbiology.json  jp-core-diagnosticreport-radiology.json  jp-core-encounter.json  jp-core-familymemberhistory.json  jp-core-imagingstudy-endoscopy.json  jp-core-imagingstudy-radiology.json  jp-core-immunization.json  jp-core-location.json  jp-core-media-endoscopy.json  jp-core-medication.json  jp-core-medicationadministration-injection.json  jp-core-medicationadministration.json  jp-core-medicationdispense-injection.json  jp-core-medicationdispense.json  jp-core-medicationrequest-injection.json  jp-core-medicationrequest.json  jp-core-medicationstatement-injection.json  jp-core-medicationstatement.json  jp-core-observation-bodymeasurement.json  jp-core-observation-dentaloral-ecs.json  jp-core-observation-dentaloral-missingtoothcondition.json  jp-core-observation-dentaloral-toothexistence.json  jp-core-observation-dentaloral-toothtreatmentcondition.json  jp-core-observation-electrocardiogram.json  (+13 more)
sazare-core/src/: compartment.rs  error.rs  fhirpath.rs  lib.rs  operation_outcome.rs  profile_loader.rs  resource.rs  resource_filter.rs  search_param.rs  search_param_registry.rs
sazare-core/tests/: jp_core_test.rs
sazare-core/valuesets/: jp-dicom-modality.json
sazare-server/: Cargo.toml
sazare-server/src/: audit.rs  auth.rs  bulk.rs  bulk_export.rs  compartment_check.rs  config.rs  dashboard.rs  demo.rs  lib.rs  main.rs  plugins.rs  smart.rs  subscription.rs  tls.rs  webhook.rs  websocket.rs
sazare-server/tests/: e2e_test.rs
sazare-store/: Cargo.toml
sazare-store/src/: error.rs  index_builder.rs  lib.rs  migrate.rs  redb_store.rs  search_executor.rs  sqlite_audit.rs  sqlite_index.rs  sqlite_store.rs
(+156 files in other folders)
