[workspace]
resolver = "2"
members = [
    "sazare-core",
    "sazare-store",
    "sazare-server",
]

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
