[package]
name = "sazare-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full"] }
