[package]
name = "sazare-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "sazare_server"
path = "src/lib.rs"

[[bin]]
name = "sazare-server"
path = "src/main.rs"

[dependencies]
sazare-core = { path = "../sazare-core" }
sazare-store = { path = "../sazare-store" }
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
json-patch = "4"
jsonwebtoken = "9"
http-body-util = "0.1.3"
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls-pemfile = "2"

[dev-dependencies]
tempfile = "3"
