[package]
name = "sazare-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sazare-core = { path = "../sazare-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
redb = "2.4"
rusqlite = { version = "0.35", features = ["bundled"] }
